--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-html, body, div, span, object{
+html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, tt, b, u i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, head, nav, section, video{
     margin: 0;
     padding: 0;
     border: 0;
@@ -13,3 +13,38 @@ html, body, div, span, object{
     -webkit-font-smooting: antialiased;
     text-size-adjust: none;
 }
+
+footer, header, nav, section, main{
+    display: block;
+}
+
+body{
+    line-height: 1;
+}
+
+ol, ul{
+    list-style: none;
+}
+
+blockquote, q{
+    quotes: none;
+}
+
+blockquote::before, blockquote::after, q:before, q:after{
+    content: '';
+    content: none;
+}
+
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+input{
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+
+
+
