--- a/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.html
+++ b/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.html
@@ -1,17 +1,46 @@
 <div class="hero">
-  <div class="rect">
+  <div class="background">
     <div class="rectangle">
     </div>
+
+    <div class="rectangle rectangle-custom">
+    </div>
   
+    <div class="rectangle">
+    </div>
+
     <div class="rectangle rectangle-custom">
     </div>
   </div>
 
-   <div class="rect custom">
+  <div class="background">
+    <div class="rectangle rectangle-custom">
+    </div>
+
     <div class="rectangle">
     </div>
   
     <div class="rectangle rectangle-custom">
     </div>
+    
+    <div class="rectangle">
+    </div>
   </div> 
+
+  <div class="hero-image">
+    <img src="./../../../../../assets/images/hero-image-removebg-preview.png" height="656">
+  </div>
+
+  <div class="hero-name">
+     <h1>HI, I AM VASILE BADRAGAN</h1> 
+     <div class="hero-name-line"></div> 
+  </div>
+
+  <div class="hero-title">
+    <h1>A Fullstack Software Engineer
+      <button mat-icon-button>
+        <img src="./../../../../../assets/play.png" height="20px" width="20px">
+      </button>
+    </h1>
+  </div>
 </div>
