--- a/src/app/core/components/shell/shell.component.scss
+++ b/src/app/core/components/shell/shell.component.scss
@@ -1,11 +1,19 @@
 .page{
-    
-    
+    //background-color: black;
+
+    &-navbar{
+        z-index: 1;
+        top: 30px;
+        height: 45px;
+        position: absolute;
+        align-content: center;
+    }
+
     &-main {
+        position: absolute;
         
         &.full-page {
             height: 100vh;
-            //background-color: #1A191D;
         }
     }
 }
