--- a/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.scss
+++ b/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.scss
@@ -1,25 +1,59 @@
 .hero{
-    height: 600px;
-    background-color: #1A191D;
-    //display: flex;
-   
-    .rect{
+    .background{
         display: flex;
+
         .rectangle{
             width: calc(100vw / 4);
-            height: calc(100vh / 2);
-            background-color: #141416;
+            height: calc(100vh / 1.7);
+            background-color: var(--hero-section-rectangle);
         }
-    
+
         .rectangle-custom{
-            margin-left: calc(100vw / 4);
+            background-color: var(--hero-section-rectangle-custom);
         }
     }
 
-    .custom{
-        margin-left: calc(100vw / 4);
-        //display: flex;
-        //justify-content: flex-end;
-        //margin-left: -15px;
+    &-image{
+        display: flex;
+        justify-content: flex-end;
+        top: 120px;
+        height: 656px;
+        width: 100%;
+        //background-color: #D9D9D9;
+        position: absolute;
+        z-index: 2;
+    }
+
+    &-name{
+        top: 250px;
+        position: absolute;
+        z-index: 3;
+        width: 60%;
+        color: #E4C8A7;
+        padding-left: 100px;
+        font-size: 30px;
+        font-weight: 800;
+        display: flex; 
+
+        .hero-name-line{
+            margin-top: 12px;
+            height: 1.5px;
+            border: 1.5px solid #E4C8A7;
+            width: 120px;
+            margin-left: 30px;
+        }
+    }
+
+    &-title{
+        top: 350px;
+        position: absolute;
+        z-index: 3;
+        width: 75%;
+        padding-left: 100px;
+        font-size: 100px;
+        font-weight: 600;
+        color: white;
+        align-content: center;
+        background-color: transparent;
     }
 }
