--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,8 @@
 :root{
+
     --hero-section-rectangle: #141416;
     --hero-section-rectangle-custom: #1A191D;
+
+    --hint-font-family: 'Hint';
+    --kanit-font-family: 'Kanit';
 }
