--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,39 @@
-<p>
-  footer works!
-</p>
+<div class="footer">
+<div class="footer-heading">
+  <div class="footer-heading-left">
+    <h1>Let's Make Something Amazing Together</h1>
+    <input 
+      type="email" 
+      matInput
+      placeholder="Your Email Adress">
+      <button matSuffix mat-icon-button aria-label="Clear" >
+        <mat-icon>-></mat-icon>
+      </button>
+  </div>
+
+  <div class="footer-heading-right">
+     <div class="footer-heading-left-social">
+       <h1>* * * * *</h1>
+     </div>
+
+     <h1>STAY CONNECTED</h1>
+
+     <div class="footer-heading-left-contact">
+       <p>icon <span>adress</span></p>
+       <p>icon <span>phone</span></p>
+       <p>icon <span>email</span></p>
+     </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="footer-link">
+  <p>2024 Copyright. All Rights Reserved</p>
+
+  <div class="footer-policy">
+   <p>Privacy Policy</p>
+   <p>Term Of Use</p>
+  </div>
+</div>
+</div>
