--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -4,6 +4,8 @@
     align-items: center;
     padding-left: 100px;
     margin-right: 100px;
+    font-family: var(--kanit-font-family);
+    font-weight: 200;
 
     &-link{
         display: flex;
