--- a/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.html
+++ b/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.html
@@ -38,9 +38,229 @@
 
   <div class="hero-title">
     <h1>A Fullstack Software Engineer
-      <button mat-icon-button>
-        <img src="./../../../../../assets/play.png" height="20px" width="20px">
-      </button>
-    </h1>
+      <span>
+        <button class="hero-title-play-button">
+          <img src="./../../../../../assets/play.png" height="20px" width="15px">
+        </button>
+      </span>
+    </h1> 
+  </div>
+
+  <div class="hero-subtitle">
+   <p>
+    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+   </p>
+  </div>
+
+  <div class="hero-download-cv">
+    <button>DOWNLOAND CV -></button>
+  </div>
+
+  <div class="hero-social-media">
+     <h3>FOLLOW ME ------</h3>
+   <div> A B C D E</div>
+  </div>
+
+  <div class="hero-statistic">
+    <div class="hero-statistic-item">
+     <h1>20K</h1>
+     <p>Projects Complited</p>
+    </div>
+
+    <div class="hero-statistic-item">
+      <h1>10+</h1>
+     <p>Years of Experience</p>
+    </div>
+    <div class="hero-statistic-item">
+      <h1>8+</h1>
+     <p>Awards Achievement</p>
+    </div>
+  </div>
+
+  <div class="resume-container">
+    <div class="resume-content">
+      <h1>RESUME</h1>
+      <h1>Discover My Resume</h1>
+
+      <div class="resume-navbar">
+        <a [routerLink]="['/aboutme']">ABOUT ME</a>
+        <a [routerLink]="['/experience']">EXPERIENCE</a>
+        <a [routerLink]="['/education']">EDUCATION</a>
+        <a [routerLink]="['/skills']">SKILLS</a>
+        <a [routerLink]="['/awards']">AWARDS </a>
+      </div>
+
+      <div class="resume-photo-section">
+         <div class="photo">
+
+         </div>
+         <div class="details">
+            <h1>HI, I AM VASILE BADRAGAN A FULLSTACK SOFTWARE ENGINEER</h1>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="contact">
+              <p>Name <span>:Vasile Badragan</span></p>
+              <p>Nationality <span>:Moldavien</span></p>
+              <p>Experience <span>:5+ Years</span></p>
+              <p>Phone <span>:+37376775951</span></p>
+              <p>Languages <span>:English, Russian, Italian</span></p>
+              <p>Email <span>:vb@mail.ru</span></p>
+            </div>
+         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio"> 
+    <h1>PORTFOLIO</h1>
+    <h2>My Selected Work</h2>
+
+    <div class="work">
+      <div class="work-item custom"> 
+      </div>
+      <div class="work-item"> 
+      </div>
+      <div class="work-item"> 
+      </div>
+    </div>
+
+    <div class="work">
+      <div class="work-item"> 
+      </div>
+      <div class="work-item"> 
+      </div>
+      <div class="work-item custom"> 
+      </div>
+    </div>
+  </div>
+
+  <div class="service">
+    <h1>SERVICE</h1>
+    <h2>MY Expertise Area</h2>
+
+    <div class="expertise-area">
+      <div class="expertise-area-item">
+        <div class="item-count">
+          <h1>01</h1>
+          <p>data</p>
+        </div>
+        <h1>Frontend Development</h1>
+        <div class="line"></div>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      </div>
+      <div class="expertise-area-item">
+        <div class="item-count">
+          <h1>02</h1>
+          <p>data</p>
+        </div>
+        <h1>Backend Development</h1>
+        <div class="line"></div>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      </div>
+    </div>
+
+    <div class="expertise-area">
+      <div class="expertise-area-item">
+        <div class="item-count">
+          <h1>03</h1>
+          <p>data</p>
+        </div>
+        <h1>Mobile Development</h1>
+        <div class="line"></div>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      </div>
+      <div class="expertise-area-item">
+        <div class="item-count">
+          <h1>04</h1>
+          <p>data</p>
+        </div>
+        <h1>CI/CD</h1>
+        <div class="line"></div>
+        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="testimonial">
+     <h1>TESTIMONIAL</h1>
+     <h2>Clients Feedback</h2>
+
+     <div class="testimonial-card">
+         <div class="image"></div>
+         <div class="details">
+           <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+           <div class="pearson">
+             <div class="name">
+               <p>Daniel Manson</p>
+               <p>Founder at CM Corp</p>
+             </div>
+
+             <div class="rating">
+              <p>* * * * *</p>
+              <p>5.0/5.0</p>
+            </div>
+           </div>
+         </div>
+     </div>
+
+     <div class="testimonial-navigation">
+      <button><< PREVIOUS</button>
+      <p>01 --------------- 04</p>
+      <button>NEXT >></button>
+    </div>
+  </div>
+
+  <div class="blog">
+    <h1>BLOG</h1>
+    <div class="title">
+      <h1>Recent Blog</h1>
+      <button>DISCOVER MORE --></button>
+    </div>
+
+    <div class="content">
+     <div class="photo-container photo-container-custom custom-margin">
+      <div class="date">
+        <p>30 December 2023</p>
+      </div>
+      <div class="description">
+        <p>Designing The Perfect Feature Comaprison Table</p>
+        <p>Web Development</p>
+      </div>
+     </div>
+
+     <div class="photo-container-custom photo-container-custom custom-margin">
+      <div class="photo-inner-container">
+        <div class="date">
+          <p>30 December 2023</p>
+        </div>
+        <div class="description">
+          <p>Designing The Perfect Feature Comaprison Table</p>
+          <p>Web Development</p>
+        </div>
+      </div>
+      <div class="photo-inner-container">
+        <div class="date">
+          <p>30 December 2023</p>
+        </div>
+        <div class="description">
+          <p>Designing The Perfect Feature Comaprison Table</p>
+          <p>Web Development</p>
+        </div>
+      </div>
+      
+     </div>
+     <div class="photo-container photo-container-custom">
+      <div class="date">
+        <p>30 December 2023</p>
+      </div>
+      <div class="description">
+        <p>Designing The Perfect Feature Comaprison Table</p>
+        <p>Web Development</p>
+      </div>
+     </div>
+    </div>
   </div>
 </div>
