--- a/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.scss
+++ b/src/app/features/feature-portfolio/components/feature-portfolio-hero/feature-portfolio-hero.component.scss
@@ -45,6 +45,7 @@
     }
 
     &-title{
+        //display: flex;
         top: 350px;
         position: absolute;
         z-index: 3;
@@ -53,7 +54,478 @@
         font-size: 100px;
         font-weight: 600;
         color: white;
-        align-content: center;
+        align-content: center;    
+        padding-bottom: 20px;  
+    }
+
+    &-title-play-button{
         background-color: transparent;
+        border: 1px solid #E4C8A7;
+        width: 35px;
+        height: 35px;
+        border-radius: 25px;
+        align-content: center;
+        margin-bottom: 10px;
+       
+
+        img{
+            padding-top: 3px;
+            padding-left: 2px;
+        }
+    }
+
+    &-subtitle{
+        top: 700px;
+        position: absolute;
+        z-index: 3;
+        width: 75%;
+        padding-left: 100px;
+        color: white;
+        align-content: center;    
+
+    }
+
+    &-download-cv{
+        top: 800px;
+        position: absolute;
+        z-index: 3;
+        width: 75%;
+        padding-left: 100px;
+        color: white;
+        align-content: center; 
+
+        button{
+            border-radius: 25px;
+            background-image:  linear-gradient(to right, #E4C8A7, white);
+            outline: 1px solid #E4C8A7;
+            outline-offset: 2px;
+            height: 40px;
+            width: 180px;
+        }
+    }
+
+    &-social-media{
+        top: 755px;
+        position: absolute;
+        z-index: 3;
+        width: 75%;
+        padding-left: 100px;
+        color: white;
+        align-content: center; 
+        width: 300px;
+        height: 100px;
+        background-color: red;
+        right: 0px;
+    }
+
+    &-statistic{
+        display: flex;
+        justify-content: space-between;
+        top: 858px;
+        position: absolute;
+       // z-index: 3;
+        width: 75%;
+        padding-left: 100px;
+        //color: white;
+        align-content: center; 
+        width: 100%;
+        height: 200px;
+        background-color: black;
+        right: 0px;
+
+       
+    }
+
+    &-statistic-item{
+        //z-index: 3;
+        //background-color: red;
+        margin-left: 100px;
+        margin-right: 100px;
+        width: 250px;
+        text-align: center;
+        align-content: center;
+        color: white;
+
+        h1{
+            font-size: 80px;
+            font-weight: 800;
+            padding-bottom: 20px;
+        }
+
+        p{
+            font-size: 20px;
+        }
+    }
+
+    .resume-container{
+        background-color: var(--hero-section-rectangle-custom);
+        height: 800px;
+        width: 100%;
+        position: absolute;
+        top: 1050px;
+        
+        .resume-content{
+            text-align: center;
+            border: 1px solid white;
+            margin: 100px 80px;
+            h1{
+                font-size: 20px;
+                color: #E4C8A7;
+            }
+
+            h1 + h1{
+                font-size: 35px;
+                color: white;
+                padding-top: 20px;
+            }
+
+            .resume-navbar{
+                margin-top: 30px;
+                
+                a{
+                    text-decoration: none;
+                    color: white;
+                    margin-left: 50px;
+                }
+            }
+
+            .resume-photo-section{
+                padding-top: 40px;
+                padding-bottom: 30px;
+                
+
+                .photo{
+                    width: 300px;
+                    height: 350px;
+                    background-color: white;
+                    margin-left: 35px;
+                    display: inline-block;
+                }
+
+                .details{
+                    margin-left: 50px;
+                    width: 400px;
+                    height: 350px;
+                    display: inline-block;
+                    border: 2px solid yellow                   
+
+                    h1{
+                        font-size: 20px;
+                        color: #E4C8A7;
+                        //padding-top: 10px;
+                    }
+
+                    p{
+                        padding-top: 20px;
+                        color: white;
+                    }
+
+                    span{
+                        padding-left: 20px;
+                    }
+
+                    .contact{
+                        padding-top: 20px;
+                        color: white;
+                        text-align: left;
+                        padding-left: 5px;
+                    }
+                }
+            }
+        }
+    }
+
+    .portfolio{
+        position: absolute;
+        top: 1850px;
+        background-color: black;
+        height: 800px;
+        width: 100%;
+        padding: 50px;
+        text-align: center;       
+
+        h1{
+            padding-top: 60px;
+            font-size: 20px;
+            color: white;
+        }
+
+        h2{
+            font-size: 30px;
+            color: white;
+            padding-top: 40px;
+            padding-bottom: 40px;
+
+        }
+
+        .work{
+           display: block; 
+           
+            .work-item{
+                width: calc(100vw / 5);
+                height: 250px;
+                background-color: white;
+                display: inline-block; 
+                margin-left: 30px;
+                border: 1px solid yellow;
+            }
+
+            .custom{
+                width: calc(100vw / 4 + 100vw / 8); 
+        
+            }
+        }
+
+        .work ~  .work{
+            margin-top: 20px;
+        }
+    }
+
+    .service{
+        position: absolute;
+        width: 100%;
+        height: 800px;
+        background-color: var(--hero-section-rectangle-custom);
+        top: 2650px;
+        padding: 60px;
+        
+        h1{
+            font-size: 20px;
+            color: white;
+            margin-left: 5px;
+        }
+
+        h2{
+            font-size: 30px;
+            color: white;
+            padding-top: 30px;
+            padding-bottom: 30px;
+            margin-left: 5px;
+        }
+
+        .expertise-area{
+           display: flex;
+           flex-direction: row;
+
+            .expertise-area-item{
+                width: 50%;
+                background-color: black;
+                margin: 10px;
+                padding: 50px;
+
+                .item-count{
+                    display: flex;
+
+                    h1{          
+                        color: white;
+                        text-align: start;
+                    }
+
+                    p{
+                      text-align: right;
+                      width: 95%;
+                    }
+
+                }
+
+                h1{
+                    color: white;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                }
+
+                .line{
+                    width: 50%;
+                    height: 2px;
+                    background-color: white;
+                    margin-bottom: 20px;
+                }
+
+                p{
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .testimonial{
+        position: absolute;
+        width: 100%;
+        height: 650px;
+        background-color: black;
+        top: 3450px;
+        padding: 60px;
+        text-align: center;
+        padding-left: 200px;
+        padding-right: 200px;
+
+        h1{
+            color: white;
+            font-size: 20px;
+            padding-bottom: 30px;
+        }
+
+        h2{
+            color: white;
+            font-size: 30px;
+            padding-bottom: 80px;
+        }
+
+        .testimonial-card{
+            display: flex;
+            width: 100%;
+            height: 250px;
+            background-color: var(--hero-section-rectangle-custom);
+
+            .image{
+                width: 200px;
+                height: 280px;
+                background-color: white;
+                margin-left: 60px;
+                padding-bottom: 250px;
+                position: absolute;
+                bottom: 180px;
+            }
+
+            .details{
+                padding: 80px;
+                padding-left: 350px;
+                
+                p{
+                    color: white;
+                }
+
+
+                .pearson{
+                    margin-top: 30px;
+                    text-align: left;
+
+                    .name{
+                      display: inline-block;
+                      text-align: left;
+                      padding-right: 20px;
+                      border-right: 1px solid yellow;
+
+                      p ~ p{
+                        margin-top: 10px;
+                      }
+                    }
+
+                    
+                    .rating{
+                        display: inline-block;
+                        text-align: left;
+                        padding-left: 20px;
+                        border-left: 1px solid yellow;
+
+                        p ~ p{
+                            margin-top: 10px;
+                        }
+                    }
+                }
+            }
+
+        }
+
+        .testimonial-navigation{
+            padding-top: 60px;
+            display: flex;
+            justify-content: space-between;
+
+            p{
+                color: white;
+            }
+        }
+    }
+
+    .blog{
+        position: absolute;
+        width: 100%;
+        height: 800px;
+        background-color: var(--hero-section-rectangle-custom);
+        top: 4100px;
+        padding: 100px 60px;
+
+        h1{
+          color: white;
+          font-size: 20px;
+        }
+
+        .title{
+            display: flex;
+            justify-content: space-between;
+            color: white;
+            font-size: 30px;
+            margin-top: 30px;
+
+            button{
+                display: flex;
+                justify-content: flex-end;
+            }
+        }
+
+        .content{
+            display: flex;
+            margin-top: 30px;
+            height: 500px;
+
+            div ~ div{
+                display: inline-block;
+                //background-color: black;
+
+                div ~ div{
+                    margin-top: 20px;
+                }
+            }
+
+            .photo-container{
+                width: 50%;
+                background-color: white;
+                padding: 20px;
+
+                .photo-inner-container{
+                    height: 48%;
+                    width: 100%;
+                    background-color: white;
+                    padding: 20px;
+                }
+            }
+
+            .photo-container-custom{
+                width: 50%;
+                background-color: white;
+                padding: 20px;
+                
+                .date{
+                    height: 40px;
+                    background-color: black;
+                    padding: 10px;
+                    text-align: left;
+                    width: 70%;
+
+                    p{
+                        color: white;
+                        font-size: 16px;
+                    }
+                }
+
+                .description{
+                    background-color: black;
+                    padding: 10px;
+                    text-align: left;
+
+                    p{
+                        color: white;
+                        font-size: 16px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+        }
+
+        .custom-margin{
+            margin-right: 20px;
+            
+        }
     }
 }
