--- a/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
@@ -1,1 +1,14 @@
-<app-feature-portfolio-hero></app-feature-portfolio-hero>
+<div class="home-page">
+    <app-shah-background></app-shah-background>
+
+    <app-hero-section></app-hero-section>
+    
+    <app-statistic></app-statistic>
+  
+    <app-resume-section></app-resume-section>
+    <!-- <div style="background-color: red; height: 200px;">
+
+    </div> -->
+</div>
+
+<!-- <app-feature-portfolio-hero></app-feature-portfolio-hero> -->
