--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,18 @@
 :root{
+    
+    --grey: #828282;
+    --white: #FFFFFF;
+    --black: #000000;
+    --red: #FF0000;
+
+
+    --body-text-color: #AFADAD;
+    --section-header-text-color: #E4C8A7;
+
+    --cream-500: #E4C8A7;
+    --cream-700: #726454;
+
+    --dark-grey-100: #D0D0D0;
 
     --hero-section-rectangle: #141416;
     --hero-section-rectangle-custom: #1A191D;
