--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -2,25 +2,44 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 100px;
-    margin-right: 100px;
     font-family: var(--kanit-font-family);
+    font-size: 18px;
     font-weight: 200;
+    position: absolute;
+    top: 40px;
+    width: 100%;
+    padding: 0px 100px;
 
     &-link{
         display: flex;
-        justify-content: flex-start;
         align-items: center;
-        gap: 50px;
 
         .logo{
-            margin-right: 50px;
-        }
+            margin-right: 100px;
+        } 
 
-        a{
-            text-decoration: none;
-            color: white;
-        }
+        .navbar-link-items{
+           
+            a{
+
+                text-decoration: none;
+                color: var(--white);
+                padding: 10px 20px;
+               // margin-right: 25px;
+            }
+
+            a:hover{
+                color: var(--dark-grey-100);
+            }
+
+            .custom.active{
+                color: red;
+            }
+
+            span{
+                margin-left: 10px;
+            }
+        }     
     }
 
     .buttons{
@@ -33,25 +52,58 @@
 
         .mode-button{
             background-color: transparent;
-            outline: 1px solid #D0D0D0;
+            outline: 1px solid var(--dark-grey-100);
             outline-offset: 2px;
             text-align: center;
             border: none;
-            width: 35px;
-            height: 35px;
-
-            img{
-                padding-bottom: 5px;
-            }
+            width: 50px;
+            height: 50px;
         }
 
         .contact-button{
             border-radius: 50px;
             border: none;
-            background-color: #D0D0D0;
-            outline: 1px solid #D0D0D0;
-            outline-offset: 2px;
-            color: #727273;
+            background-color: var(--dark-grey-100);
+            outline: 1px solid var(--dark-grey-100);
+            outline-offset: 4px;
+            color: var(--grey);
+            height: 45px;
+            width: 130px;
+            font-size: 18px;
         }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    //.navbar a:not(:first-child) {display: none;}
+    .navbar{
+        padding: 0px;
+    }
+    
+    .navbar a {
+        display: none;
+    }
+
+    .navbar .buttons {
+        display: none;
+    }
+
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
     }
 }
