--- a/src/styles/partials/_page.scss
+++ b/src/styles/partials/_page.scss
@@ -5,19 +5,20 @@
     &-navbar {
         
         //z-index: 1;
-        width: 100%;
-        height: 60px;
+        //width: 100%;
+        //height: 40px;
     }
 
     &-main {
-        position: absolute;
+        //position: absolute;
         //z-index: 0;
-        width: 100%;
-        height: calc(100vh - 102px);
+        //width: 100%;
+       // height: calc(100vh - 102px);
+       font-family: var(--kanit-font-family);
     }
 
     &-footer {
-        width: 100%;
-        height: 40px;
+        // width: 100%;
+        // height: 40px;
     }
 }
