add add portfolio and service sections

--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.html
@@ -29,6 +29,12 @@
             <p>Languages <span>:English, Russian, Italian</span></p>
             <p>Email <span>:vb@mail.ru</span></p>
           </div>
+
+          <div class="work-progress-button">
+            <button>MY WORK PROGRESS 
+              <img src="assets/play-grey.png">
+            </button>
+          </div>
        </div>
     </div>
   </div>
