--- a/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
@@ -6,9 +6,8 @@
     <app-statistic></app-statistic>
   
     <app-resume-section></app-resume-section>
-    <!-- <div style="background-color: red; height: 200px;">
 
-    </div> -->
+    <app-portfolio-section></app-portfolio-section>
+
+    <app-service-section></app-service-section>
 </div>
-
-<!-- <app-feature-portfolio-hero></app-feature-portfolio-hero> -->
