--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,13 +6,31 @@
     --red: #FF0000;
 
 
+    --button-hover: #c5bfbf;
+
     --body-text-color: #AFADAD;
-    --section-header-text-color: #E4C8A7;
 
+    --cream-50: #FDFAF7;
+    --cream-100: #FAF4ED;
+    --cream-200: #F4E9DC;
+    --cream-300: #EFDECA;
+    --cream-400: #E9D3B9;
     --cream-500: #E4C8A7;
+    --cream-600: #AB967D;
     --cream-700: #726454;
+    --cream-800: #39322A;
+    --cream-900: #171411;
 
+    --dark-grey-50: #E8E8E8;
     --dark-grey-100: #D0D0D0;
+    --dark-grey-200: #A1A1A2;
+    --dark-grey-300: #727273;
+    --dark-grey-400: #434345;
+    --dark-grey-500: #141416;
+    --dark-grey-600: #0F0F11;
+    --dark-grey-700: #0A0A0B;
+    --dark-grey-800: #050506;
+    --dark-grey-800: #050506;
 
     --hero-section-rectangle: #141416;
     --hero-section-rectangle-custom: #1A191D;
