Add testimonial section

--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.html
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.html
@@ -1,12 +1,15 @@
 <div class="service">
   <h1>SERVICE</h1>
-  <h2>MY Expertise Area</h2>
+  <h2>My Expertise Area</h2>
 
   <div class="expertise-area">
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>01</h1>
-        <p>data</p>
+        <!-- <p>
+          
+        </p> -->
+        <img src="assets/icons/programmer-laptop.svg" width="50px" height="50px">
       </div>
       <h1>Frontend Development</h1>
       <div class="line"></div>
