--- a/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
@@ -10,4 +10,6 @@
     <app-portfolio-section></app-portfolio-section>
 
     <app-service-section></app-service-section>
+
+    <app-testimonial-section></app-testimonial-section>
 </div>
