--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,10 +30,12 @@
     --dark-grey-600: #0F0F11;
     --dark-grey-700: #0A0A0B;
     --dark-grey-800: #050506;
-    --dark-grey-800: #050506;
+    --dark-grey-900: #050506; // add color
 
     --hero-section-rectangle: #141416;
-    --hero-section-rectangle-custom: #1A191D;
+    --hero-section-rectangle-custom: #1A191D; // rename to background
+
+    --background: #1A191D;
 
     --hint-font-family: 'Hint';
     --kanit-font-family: 'Kanit';
