--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
@@ -1,29 +1,31 @@
 .service{
-    height: 800px;
+    height: 160vh;
     background-color: var(--hero-section-rectangle-custom);
-    padding: 60px;
+    padding: 100px;
+    padding-top: 200px;
     
     h1{
-        font-size: 20px;
-        color: white;
-        margin-left: 5px;
+        font-size: 32px;
+        font-weight: 400;
+        color: var(--cream-500);
     }
 
     h2{
-        font-size: 30px;
-        color: white;
-        padding-top: 30px;
-        padding-bottom: 30px;
+        font-size: 64px;
+        color: var(--white);
+        margin-top: 50px;
+        margin-bottom: 50px;
         margin-left: 5px;
     }
 
     .expertise-area{
        display: flex;
        flex-direction: row;
+       gap: 15px;
 
         .expertise-area-item{
             width: 50%;
-            background-color: black;
+            background-color: var(--dark-grey-500);
             margin: 10px;
             padding: 50px;
 
@@ -31,33 +33,54 @@
                 display: flex;
 
                 h1{          
-                    color: white;
+                    color: var(--cream-500);
                     text-align: start;
+                    font-size: 18px;
                 }
 
-                p{
-                  text-align: right;
-                  width: 95%;
+                // p{
+                //     text-align: right;
+                //     width: 95%;
+                //     font-size: 24px;
+                // }
+
+                img{
+                    display: flex;
+                    align-items: flex-end;
+                    width: 95%;
+                    font-size: 24px;
+                    color: var(--cream-500);
                 }
 
             }
 
             h1{
-                color: white;
+                color: var(--cream-500);
                 margin-top: 20px;
                 margin-bottom: 20px;
+                font-size: 24px;
             }
 
             .line{
                 width: 50%;
                 height: 2px;
-                background-color: white;
+                background-color: var(--cream-500);
                 margin-bottom: 20px;
             }
 
             p{
                 color: white;
+                font-size: 18px;
+                font-weight: 200;
             }
+        }
+
+        .expertise-area-item{
+           // background-color: aliceblue;
+        }
+
+        .expertise-area-item:first-child{
+            //padding-top: 15px;
         }
     }
 }
