--- a/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
@@ -12,4 +12,6 @@
     <app-service-section></app-service-section>
 
     <app-testimonial-section></app-testimonial-section>
+
+    <app-blog-section></app-blog-section>
 </div>
