--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,6 @@
     --black: #000000;
     --red: #FF0000;
 
-
     --button-hover: #c5bfbf;
 
     --body-text-color: #AFADAD;
@@ -23,6 +22,7 @@
 
     --dark-grey-50: #E8E8E8;
     --dark-grey-100: #D0D0D0;
+    --dark-grey-150: #b8b8b8;
     --dark-grey-200: #A1A1A2;
     --dark-grey-300: #727273;
     --dark-grey-400: #434345;
@@ -30,7 +30,7 @@
     --dark-grey-600: #0F0F11;
     --dark-grey-700: #0A0A0B;
     --dark-grey-800: #050506;
-    --dark-grey-900: #050506; // add color
+    --dark-grey-900: #050506; 
 
     --hero-section-rectangle: #141416;
     --hero-section-rectangle-custom: #1A191D; // rename to background
