Update footer style

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -6,23 +6,19 @@
       type="email" 
       matInput
       placeholder="Your Email Adress">
-      <button matSuffix mat-icon-button aria-label="Clear" >
-        <mat-icon>-></mat-icon>
+      <button matSuffix mat-icon-button aria-label="Clear">
+        <img src="assets/arrow-email-button.svg">
       </button>
   </div>
 
   <div class="footer-heading-right">
-     <div class="footer-heading-left-social">
-       <h1>* * * * *</h1>
-     </div>
+    <img src="assets/social-media.svg">
+    
+    <h1>STAY CONNECTED</h1>
 
-     <h1>STAY CONNECTED</h1>
-
-     <div class="footer-heading-left-contact">
-       <p>icon <span>adress</span></p>
-       <p>icon <span>phone</span></p>
-       <p>icon <span>email</span></p>
-     </div>
+    <span><img src="assets/address-icon.svg"> Chisinau, Moldova</span>
+    <span><img src="assets/phone-icon.svg"> +373-695-63326</span>
+    <span><img src="assets/email-icon.svg"> best.developer@dev.com</span>
   </div>
 </div>
 
@@ -33,7 +29,7 @@
 
   <div class="footer-policy">
    <p>Privacy Policy</p>
-   <p>Term Of Use</p>
+   <p>Term of Use</p>
   </div>
 </div>
 </div>
