--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
@@ -1,5 +1,5 @@
 .resume-container{
-    background-color: var(--hero-section-rectangle-custom);
+    background-color: var(--background);
     height: 160vh;
     padding: 100px;
  
