--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
@@ -1,6 +1,6 @@
 .service{
     height: 160vh;
-    background-color: var(--hero-section-rectangle-custom);
+    background-color: var(--background);
     padding: 100px;
     padding-top: 200px;
     
