--- a/src/app/features/feature-portfolio/components/shah-background/shah-background.component.scss
+++ b/src/app/features/feature-portfolio/components/shah-background/shah-background.component.scss
@@ -8,6 +8,6 @@
     }
 
     .rectangle-custom{
-        background-color: var(--hero-section-rectangle-custom);
+        background-color: var(--background);
     }
 }
