--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,10 +5,6 @@
     --black: #000000;
     --red: #FF0000;
 
-    --button-hover: #c5bfbf;
-
-    --body-text-color: #AFADAD;
-
     --cream-50: #FDFAF7;
     --cream-100: #FAF4ED;
     --cream-200: #F4E9DC;
@@ -33,9 +29,10 @@
     --dark-grey-900: #050506; 
 
     --hero-section-rectangle: #141416;
-    --hero-section-rectangle-custom: #1A191D; // rename to background
-
     --background: #1A191D;
+    --button-hover: #c5bfbf;
+    --body-text-color: #AFADAD;
+    --footer-hr-color: #8d8888;
 
     --hint-font-family: 'Hint';
     --kanit-font-family: 'Kanit';
