--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,57 +1,90 @@
 .footer{
-    height: 450px;
-    background-color: black;
-    padding: 60px;
+    height: 90vh;
+    background-color: var(--dark-grey-500);
+    padding: 100px;
+    font-family: var(--kanit-font-family);
     
     &-heading{
-        color: white;
+        color: var(--white);
         display: flex;
-        width: 70%;
         padding-top: 20px;
         margin-bottom: 60px;
 
         h1{
-            font-size: 60px;
+            font-size: 64px;
+            font-weight: 400;
+            line-height: 80px;
         }
 
         input{
-            margin-top: 40px;
-            height: 40px;
+            margin-top: 50px;
+            height: 58px;
             width: 80%;
+            background-color: var(--background);
+            border: none;
+            padding-left: 30px;
+            color: var(--white);
+        }
+
+        input::placeholder{
+            color: var(--white);
+            font-size: 16px;
         }
 
         button{
             border-radius: 0px;
-            height: 41px;
-            
+            height: 58px;
+            width: 60px;
+            background-color: var(--cream-500);
+
+            img{
+                width: 25px;
+                height: 25px;
+            }
         }
     }
 
     .footer-heading-right{
-        display: grid;
-        grid-gap: 20px;
-        width: 30%;
-
-        &-social{
-            
-        }
+        display: block;
+        width: 80%;
+        padding-left: 100px;
+        padding-bottom: 30px;
 
         h1{
-            font-size: 16px;   
+            font-size: 24px;   
+            color: var(--cream-500);
+            line-height: 40px;
+            margin-top: 30px;
         }
 
+        span{
+            display: block;
+            font-size: 16px;
+            font-weight: 200;
+            margin-top: 20px;
 
-        .footer-heading-left-contact{
-            display: grid;
-            grid-gap: 20px;
-        }
+            img{
+                width: 30px;
+                height: 30px;
+                margin-bottom: -5px;
+                margin-right: 10px;
+            }
+        } 
+    }
+
+    hr{
+        height:0.5px;
+        border-width:0;
+        background-color:var(--footer-hr-color);
     }
 
     .footer-link{
         display: flex;
         justify-content: space-between;
         color: white;
-        padding-top: 40px;
+        padding-top: 60px;
+        font-size: 16px;
+        font-weight: 200;
 
       .footer-policy{
         display: flex;
