create page components

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,13 +1,11 @@
 <div class="navbar">
-  
-
   <div class="navbar-link"> 
     <div class="logo">
       <img src="assets/logo.png" width="50px" height="30px">
     </div>
 
     <div class="navbar-link-items" id="navbar">
-      <a class="custom" [routerLink]="['/home']">HOME</a>
+      <a class="custom" [routerLink]="['']">HOME</a>
       <a class="custom" [routerLink]="['/about']">ABOUT</a>
       <a class="custom" [routerLink]="['/portfolio']">PORTFOLIO</a>
       <a [routerLink]="['/service']">SERVICE</a>
