--- a/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/portfolio-home-page/portfolio-home-page.component.html
@@ -1,5 +1,5 @@
 <div class="home-page">
-    <app-shah-background></app-shah-background>
+    <app-chess-background></app-chess-background>
 
     <app-hero-section></app-hero-section>
     
