--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -81,8 +81,8 @@
     .footer-link{
         display: flex;
         justify-content: space-between;
-        color: white;
-        padding-top: 60px;
+        color: var(--white);
+        padding-top: 70px;
         font-size: 16px;
         font-weight: 200;
 
