--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
@@ -25,3 +25,12 @@
   <div class="rectangle">
   </div>
 </div> 
+
+<div class="header">
+  <div class="name">
+    <h1>{{ titleFormated }}</h1> 
+    <div class="hero-name-line"></div> 
+  </div>
+
+  <h2>{{ subtitle }}</h2>
+</div>
