--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -33,6 +33,7 @@
     --button-hover: #c5bfbf;
     --body-text-color: #AFADAD;
     --footer-hr-color: #8d8888;
+    --hover-background: #D9D9D9;
 
     --hint-font-family: 'Hint';
     --kanit-font-family: 'Kanit';
