--- a/src/app/features/feature-portfolio/pages/portfolio-page/portfolio-page.component.scss
+++ b/src/app/features/feature-portfolio/pages/portfolio-page/portfolio-page.component.scss
@@ -1,59 +1,96 @@
-.portfolio{
-    background-color: var(--dark-grey-500);
-    height: 160vh;
-    padding: 100px;
-    text-align: center;       
+.portfolio {
+  background-color: var(--background);
+  padding: 200px 100px;
+  text-align: center;
 
-    h1{
-        font-size: 32px;
-        font-weight: 400;
-        color: var(--cream-500);
+  h1 {
+    font-size: 32px;
+    font-weight: 400;
+    color: var(--cream-500);
+  }
+
+  h2 {
+    font-size: 64px;
+    color: var(--white);
+    margin-top: 40px;
+  }
+
+  .resume-navbar {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+    padding: 0% 26%;
+
+    a {
+      text-decoration: none;
+      color: var(--dark-grey-100);
+      margin-left: 10px;
+      font-weight: 200;
     }
 
-    h2{
-        font-size: 64px;
-        color: var(--white);
-        margin-top: 40px;
+    a:nth-child(1) {
+      //TODO: change colore on selected menu
+      color: var(--cream-500);
     }
+  }
 
-    .work{
-       display: block; 
-       margin-top: 60px;
+  .work {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 35px;
+    row-gap: 50px;
+    margin-top: 60px;
 
-        .work-item-1, .work-item-2, .work-item-3, .work-item-4, .work-item-5, .work-item-6 {
-            width: calc(100vw / 5);
-            height: 350px;
-            background-color: var(--white);
-            display: inline-block; 
-            margin: 20px;
-            padding: 40px;
-        }
-
-        .custom{
-            width: calc(100vw / 4 + 100vw / 8); 
-        }
+    .work-item{
+        display: block;
+        
+        height: 445px;
 
         .inner-work-item{
-            width: 230px;
-            height: 80px;
-            padding: 25px;
-            text-align: left;
-            align-content: center;
-            background-color: var(--dark-grey-500);
-            line-height: 25px;
-            margin-top: 195px;
+            height: 80%;
+            background-color: rgb(222, 217, 217);   
 
-            h3{
-                font-size: 18px;
-                color: var(--white);
-            }
-
-            p{
-                font-size: 14px;
-                font-weight: 300;
-                color: var(--cream-500)
+            button{
+                display: none;
+                width: 50px;
+                height: 50px;
+                background-color: transparent;
+                margin-top: 150px;
+                margin-left: 30px;
+                border-radius: 25px;
+                border: none;
+                outline: 1px solid white;
             }
         }
-    }
-}
 
+        h3{
+          margin-top: 30px;
+          color: var(--white);
+          font-size: 26px;
+          font-weight: 400;
+        }
+
+        p{
+            color: var(--body-text-color);
+            font-size: 16px;
+            font-weight: 200;
+            margin-top: 10px;
+        }
+    }
+
+    .work-item:hover{
+
+        .inner-work-item{
+            background-color: rgb(150, 149, 149);
+            button{
+                display: inline;   
+            }
+        }
+
+        p{
+            color: var(--cream-500)
+        }
+
+    }
+  }
+}
