--- a/src/app/features/feature-portfolio/pages/about-page/about-page.component.html
+++ b/src/app/features/feature-portfolio/pages/about-page/about-page.component.html
@@ -1,2 +1,10 @@
+<app-page-heading 
+    [title]="'about '" 
+    [subtitle]="'Explore My Story'">
+</app-page-heading>
 
-<app-page-heading></app-page-heading>
+<app-about-me-section></app-about-me-section>
+<app-experience-section></app-experience-section>
+<app-skills-section></app-skills-section>
+<app-partner-section></app-partner-section>
+<app-achievement-section></app-achievement-section>
