--- a/src/app/features/feature-portfolio/pages/blog-page/blog-page.component.html
+++ b/src/app/features/feature-portfolio/pages/blog-page/blog-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  blog-page works!
-</p>
+<app-page-heading 
+    [title]="'blog'" 
+    [subtitle]="'Explore Recently Posts'">
+</app-page-heading>
