--- a/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.html
+++ b/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  contact-page works!
-</p>
+<app-page-heading 
+    [title]="'contact'" 
+    [subtitle]="'Get In Touch With Me'">
+</app-page-heading>
