--- a/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
+++ b/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
@@ -1,3 +1,235 @@
-<p>
-  service-page works!
-</p>
+<app-page-heading 
+    [title]="'service'" 
+    [subtitle]="'Explore My Covering Areas'">
+</app-page-heading>
+
+<div class="service">
+  <h1>SERVICE</h1>
+  <h2>My Expertise Area</h2>
+
+  <div class="expertise-area">
+    <div class="expertise-area-item expertise-area-item-photo">
+      
+    </div>
+
+    <div class="expertise-area-item">
+      <div class="item-count">
+        <h1>01</h1>
+        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+      </div>
+      <h1>Frontend Development</h1>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+      <div class="work-process-tools-dividion">
+        <div class="work-process">
+           <h3>Work Process</h3>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+
+        <div class="tools">
+          <h3>Tools</h3>
+          <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="expertise-area-item">
+      <div class="item-count">
+        <h1>02</h1>
+        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+      </div>
+      <h1>Backend Development</h1>
+      <div class="line"></div>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+      <div class="work-process-tools-dividion">
+        <div class="work-process">
+           <h3>Work Process</h3>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+
+        <div class="tools">
+          <h3>Tools</h3>
+          <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="expertise-area-item expertise-area-item-photo">
+      
+    </div>
+
+    <div class="expertise-area-item expertise-area-item-photo">
+      
+    </div>
+
+    <div class="expertise-area-item">
+      <div class="item-count">
+        <h1>03</h1>
+        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+      </div>
+      <h1>Mobile Development</h1>
+      <div class="line"></div>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+      <div class="work-process-tools-dividion">
+        <div class="work-process">
+           <h3>Work Process</h3>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+
+        <div class="tools">
+          <h3>Tools</h3>
+          <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+      </div>
+    </div>
+    
+ 
+    <div class="expertise-area-item">
+      <div class="item-count">
+        <h1>04</h1>
+        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+      </div>
+      <h1>CI/CD</h1>
+      <div class="line"></div>
+      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+      <div class="work-process-tools-dividion">
+        <div class="work-process">
+           <h3>Work Process</h3>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+
+        <div class="tools">
+          <h3>Tools</h3>
+          <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+           <div class="work-process-item">
+            <mat-icon svgIcon="radio-button-icon"></mat-icon>
+            <p>Makeup</p>
+           </div>
+        </div>
+      </div>
+    </div>
+    <div class="expertise-area-item expertise-area-item-photo">
+      
+    </div>
+  </div>
+</div>
