--- a/src/app/features/feature-portfolio/pages/single-blog-page/single-blog-page.component.html
+++ b/src/app/features/feature-portfolio/pages/single-blog-page/single-blog-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  single-blog-page works!
-</p>
+<app-page-heading 
+    [title]="'service'" 
+    [subtitle]="'Explore My Covering Areas'">
+</app-page-heading>
