--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,4 @@
 @import './variables';
 @import './partials/index';
+
+@import "../../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
