--- a/src/app/core/pages/not-found/not-found.component.html
+++ b/src/app/core/pages/not-found/not-found.component.html
@@ -57,11 +57,7 @@
      <p>Sorry, We Couldn't Find The Page Yoe Were Looking For.</p>
      <p>Let's Go Back</p>
      <button matButton>
-      
-      <span>
-        GO BACK 
-        
-      </span>
+      <span>GO BACK</span>
       <mat-icon svgIcon="button-arrow-right"></mat-icon>
     </button>
   </div>
